--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = M5StickC
+
 [env:devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
@@ -21,3 +24,13 @@ build_flags =
 	-D INTERVALO=300
 	-D WFssid='"famitor_IoT"'
 	-D WFpassword='"tarazona"'
+
+[env:M5StickC]
+platform = espressif32
+board = m5stick-c
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+	-D VERSION='"3.0.1"'
+	-D PLACA='"devkit-v1"'
+	-D _DEBUG_
