--- a/platformio.ini
+++ b/platformio.ini
@@ -32,5 +32,5 @@ framework = arduino
 monitor_speed = 115200
 build_flags = 
 	-D VERSION='"3.0.1"'
-	-D PLACA='"devkit-v1"'
+	-D PLACA='"M5StickC"'
 	-D _DEBUG_
